# inpatient_patch

./: .gitignore  INSTALL.md  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
inpatient_patch/: hooks.py  modules.txt  patches.txt
inpatient_patch/inpatient_patch/: billing.py  dashboard_ip.py  department.py  handover_board.py  hub.py  install.py  notifications.py  nurse_handover.py  ot.py  uninstall.py  workflow.py
inpatient_patch/inpatient_patch/dashboard_chart/inpatient_admissions/: inpatient_admissions.json
inpatient_patch/inpatient_patch/doctype/admission_social_data/: admission_social_data.json  admission_social_data.py
inpatient_patch/inpatient_patch/doctype/daily_round_plan/: daily_round_plan.json  daily_round_plan.py
inpatient_patch/inpatient_patch/doctype/department_admission_protocol/: department_admission_protocol.json  department_admission_protocol.py
inpatient_patch/inpatient_patch/doctype/department_order_set_item/: department_order_set_item.json  department_order_set_item.py
inpatient_patch/inpatient_patch/doctype/department_protocol_form/: department_protocol_form.json  department_protocol_form.py
inpatient_patch/inpatient_patch/doctype/diabetic_insulin_chart/: diabetic_insulin_chart.json  (+1 more)
inpatient_patch/inpatient_patch/patches/: create_custom_fields.py
inpatient_patch/public/js/: checkbox_children.js  clinical_procedure.js  emergency_assessment.js  handover_board.js  inpatient_record_hub.js  mar.js  nurse_assignment.js  nurse_defaults.js  nurse_handover.js  ot_case.js  preop_checklist.js  service_order.js
(+120 files in other folders)
