[project]
name = "inpatient_patch"
authors = [{ name = "Dagaar", email = "info.dagaar@gmail.com" }]
description = "Comprehensive Inpatient, OT and Somali-billing extension for Frappe Healthcare v15"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = ["B017","B018","B023","B904","E101","E402","E501","E741","F401","F403","F405","F722","W191"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
